Feat: semántica HTML <figure>

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
             <img src="assets/icon-moon.svg" alt="light" />
           </button>
 
-          <div class="flags-item" data-language="es" title="español">
+          <figure class="flags-item" data-language="es" title="español">
             <img src="assets/icon/bandera-es.svg" alt="es" />
-          </div>
-          <div class="flags-item" data-language="en" title="ingles">
+          </figure>
+          <figure class="flags-item" data-language="en" title="ingles">
             <img src="assets/icon/bandera-gb.svg" alt="en" />
-          </div>
+          </figure>
         </div>
       </div>
     </header>
 
-    <div class="home-bg-puntos">
+    <figure class="home-bg-puntos">
       <svg
         style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px"
       >
@@ -92,11 +92,11 @@
           fill="url(#pattern-1:rb:)"
         ></rect>
       </svg>
-    </div>
+    </figure>
 
-    <div class="home-img-hero">
+    <figure class="home-img-hero">
       <img src="assets/logo-hero-light.svg" alt="logo-hero" />
-    </div>
+    </figure>
 
     <div class="menu">
       <nav class="menu-nav">
@@ -292,7 +292,7 @@
             <h3 data-section="inicio" data-value="h3">
               Frontend Web Developer
             </h3>
-            <div class="box-contact">
+            <figure class="box-contact">
               <a
                 href="https://www.linkedin.com/in/fercode"
                 title="LinkedIn"
@@ -345,7 +345,7 @@
                   />
                 </svg>
               </a>
-            </div>
+            </figure>
           </div>
         </div>
       </section>
@@ -353,7 +353,6 @@
       <section id="sobreMi" class="about" data-scroll-spy>
         <div class="about-box container">
           <img
-            id="Fernando"
             src="assets/fer-cv.avif"
             alt="Fernando Sosa"
             title="Programador"
@@ -382,51 +381,51 @@
           <div class="skills-box front-ent">
             <h2 class="title-second">FRONTEND</h2>
             <div class="skills-item">
-              <div class="box-icon">
+              <figure>
                 <img src="assets/skill/front-html.svg" alt="html" />
                 <img src="assets/skill/front-html-text.svg" alt="html" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/front-css.svg" alt="css" />
                 <img src="assets/skill/front-css-text.svg" alt="css" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/front-js.svg" alt="JavaScript" />
                 <img src="assets/skill/front-js-text.svg" alt="JavaScript" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/front-ts.svg" alt="TypeScript" />
                 <img src="assets/skill/front-ts-text.svg" alt="TypeScript" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/front-react.svg" alt="react" />
                 <img src="assets/skill/front-react-text.svg" alt="react" />
-              </div>
+              </figure>
             </div>
           </div>
           <div class="skills-box back-ent">
             <h2 class="title-second">BACKEND</h2>
             <div class="skills-item">
-              <div class="box-icon">
+              <figure>
                 <img src="assets/skill/back-nodejs.svg" alt="node" js" /> <img
                 src="assets/skill/back-nodejs-text.svg" alt="node" js" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/back-express.svg" alt="express" />
                 <img src="assets/skill/back-express-text.svg" alt="express" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/back-mysql.svg" alt="MySQL" />
                 <img src="assets/skill/back-mysql-text.svg" alt="MySQL" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/back-sqlite.svg" alt="SQLite" />
                 <img src="assets/skill/back-sqlite-text.svg" alt="SQLite" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/back-mongodb.svg" alt="MongoDB" />
                 <img src="assets/skill/back-mongodb-text.svg" alt="MongoDB" />
-              </div>
+              </figure>
             </div>
           </div>
           <div class="skills-box herramientas">
@@ -438,31 +437,31 @@
               TOOLS
             </h2>
             <div class="skills-item herramie">
-              <div class="box-icon">
+              <figure>
                 <img src="assets/skill/herr-terminal.svg" alt="terminal" />
                 <img src="assets/skill/herr-terminal-text.svg" alt="terminal" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/herr-git.svg" alt="git" />
                 <img src="assets/skill/herr-git-text.svg" alt="git" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/herr-github.svg" alt="github" />
                 <img src="assets/skill/herr-github-text.svg" alt="github" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/herr-npm.svg" alt="npm" />
                 <img src="assets/skill/herr-npm-text.svg" alt="npm" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/herr-vite.svg" alt="vite" />
                 <img src="assets/skill/herr-vite-text.svg" alt="vite" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/herr-figma.svg" alt="figma" />
                 <img src="assets/skill/herr-figma-text.svg" alt="figma" />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img
                   src="assets/skill/herr-illustrator.svg"
                   alt="illustrator"
@@ -471,14 +470,14 @@
                   src="assets/skill/herr-illustrator-text.svg"
                   alt="illustrator"
                 />
-              </div>
-              <div class="box-icon">
+              </figure>
+              <figure>
                 <img src="assets/skill/herr-photoshop.svg" alt="photoshop" />
                 <img
                   src="assets/skill/herr-photoshop-text.svg"
                   alt="photoshop"
                 />
-              </div>
+              </figure>
             </div>
           </div>
         </div>
@@ -490,7 +489,7 @@
         </h2>
         <div class="proyecto-container">
           <section class="proyecto-page">
-            <div class="box-img bg-theme-fs">
+            <figure class="bg-theme-fs">
               <a
                 class="link-title"
                 href="https://marketplace.visualstudio.com/items?itemName=cod-fs.theme-italic-fs"
@@ -504,8 +503,8 @@
                   Theme Dark/Light <span>.VSIX</span>
                 </p>
               </a>
-            </div>
-            <div class="box-img bg-crud">
+            </figure>
+            <figure class="bg-crud">
               <a
                 class="link-title"
                 href="https://fergsosa.github.io/react-app-crud"
@@ -517,8 +516,8 @@
                   Router/Context/Reducers/Redux <span>React</span>
                 </p>
               </a>
-            </div>
-            <div class="box-img bg-spa-apis">
+            </figure>
+            <figure class="bg-spa-apis">
               <a
                 class="link-title"
                 href="https://fergsosa.github.io/app-SPA-apis/"
@@ -530,8 +529,8 @@
                   Multiple apis consumption <span> HTML | CSS | JS </span>
                 </p>
               </a>
-            </div>
-            <div class="box-img bg-tarjeta-compra">
+            </figure>
+            <figure class="bg-tarjeta-compra">
               <a
                 class="link-title"
                 href="https://fergsosa.github.io/react-app-tarjeta_de_compra/"
@@ -545,8 +544,8 @@
                   Loading product cart <span> React | Tailwind </span>
                 </p>
               </a>
-            </div>
-            <div class="box-img bg-blog">
+            </figure>
+            <figure class="bg-blog">
               <a
                 class="link-title"
                 href="https://fergsosa.github.io/eleventy-blog-started/"
@@ -558,8 +557,8 @@
                   Blog Markdown <span> Eleventy | Nunjucks </span>
                 </p>
               </a>
-            </div>
-            <div class="box-img bg-ajax">
+            </figure>
+            <figure class="bg-ajax">
               <a
                 class="link-title"
                 href="https://fergsosa.github.io/Incluir-html-AJAX/"
@@ -573,8 +572,8 @@
                   Integrating HTML with AJAX <span>HTML | CSS | JS</span>
                 </p>
               </a>
-            </div>
-            <div class="box-img bg-sliders">
+            </figure>
+            <figure class="bg-sliders">
               <a
                 class="link-title"
                 href="https://fergsosa.github.io/Slider-Efectos-Series/"
@@ -587,7 +586,7 @@
                   Slider details/automatic <span>HTML | CSS | JS</span>
                 </p>
               </a>
-            </div>
+            </figure>
           </section>
         </div>
       </section>
@@ -600,7 +599,8 @@
           <h3 data-section="contacto" data-value="h3">
             Thank you for your visit
           </h3>
-          <div class="box-contact">
+
+          <figure class="box-contact">
             <a
               href="https://www.linkedin.com/in/fercode"
               title="LinkedIn"
@@ -653,7 +653,8 @@
                 />
               </svg>
             </a>
-          </div>
+          </figure>
+
           <button class="contact-cv">
             <a
               href="assets/cv/CV-Fer-Programacion-F.pdf"
