Feat: semántica HTML <nav>

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </figure>
 
     <div class="menu">
-      <nav class="menu-nav">
+      <nav>
         <a href="#inicio" data-scroll-spy>
           <span data-section="menu" data-value="m1">Home</span>
           <img
