Feat: semántica HTML <strong>

--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
         <div class="home-box container">
           <div class="home-info">
             <h1>Fernando Sosa</h1>
-            <h3 data-section="inicio" data-value="h3">
+            <strong data-section="inicio" data-value="h3">
               Frontend Web Developer
-            </h3>
+            </strong>
             <figure class="box-contact">
               <a
                 href="https://www.linkedin.com/in/fercode"
