Feat: semántica HTML <span>

--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@
           <h2 class="title-second" data-section="contacto" data-value="h2">
             Contact
           </h2>
-          <h3 data-section="contacto" data-value="h3">
+          <span data-section="contacto" data-value="h3">
             Thank you for your visit
-          </h3>
+          </span>
 
           <figure class="box-contact">
             <a
