Feat: semántica HTML <article/address>

--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
             <strong data-section="inicio" data-value="h3">
               Frontend Web Developer
             </strong>
-            <figure class="box-contact">
+
+            <address class="box-contact">
               <a
                 href="https://www.linkedin.com/in/fercode"
                 title="LinkedIn"
@@ -345,7 +346,7 @@
                   />
                 </svg>
               </a>
-            </figure>
+            </address>
           </div>
         </div>
       </section>
@@ -358,7 +359,7 @@
             title="Programador"
             loading="lazy"
           />
-          <div class="about-text">
+          <article class="about-text">
             <h2 class="title-second" data-section="sombreMi" data-value="h2">
               About
             </h2>
@@ -372,7 +373,7 @@
               Developer or Web Programmer, providing value through my
               commitment, dedication and adaptability.
             </p>
-          </div>
+          </article>
         </div>
       </section>
 
@@ -600,7 +601,7 @@
             Thank you for your visit
           </span>
 
-          <figure class="box-contact">
+          <address class="box-contact">
             <a
               href="https://www.linkedin.com/in/fercode"
               title="LinkedIn"
@@ -653,7 +654,7 @@
                 />
               </svg>
             </a>
-          </figure>
+          </address>
 
           <button class="contact-cv">
             <a
