--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./style/style.css" />
 
-    <script src="script.js" type="module"></script>
+    <script src="script.js" type="module" defer></script>
     <script>
       // (function () {
       const userTheme = localStorage.getItem("theme"),
