Feat: semántica HTML <nav>

--- a/index.html
+++ b/index.html
@@ -110,60 +110,65 @@
       />
     </figure>
 
-    <div class="menu">
-      <nav>
-        <a href="#inicio" data-scroll-spy>
-          <span data-section="menu" data-value="m1">Home</span>
-          <img
-            class="menu-home"
-            src="assets/icon/btn-menu-home.svg"
-            alt="Home"
-            title="Home"
-            fetchpriority="high"
-          />
-        </a>
-        <a href="#sobreMi" data-scroll-spy>
-          <span data-section="menu" data-value="m2">About</span>
-          <img
-            class="menu-about"
-            src="assets/icon/btn-menu-perfil.svg"
-            alt="About"
-            title="About"
-            fetchpriority="high"
-          />
-        </a>
-        <a href="#habilidades" data-scroll-spy>
-          <span data-section="menu" data-value="m3">Skills</span>
-          <img
-            class="menu-skills"
-            src="assets/icon/btn-menu-habilidades.svg"
-            alt="Skills"
-            title="Skills"
-            fetchpriority="high"
-          />
-        </a>
-        <a href="#proyectos" data-scroll-spy>
-          <span data-section="menu" data-value="m4">Porfolio</span>
-          <img
-            class="menu-project"
-            src="assets/icon/btn-menu-proyectos.svg"
-            alt="Porfolio"
-            title="Porfolio"
-            fetchpriority="high"
-          />
-        </a>
-        <a href="#contacto" data-scroll-spy>
-          <span data-section="menu" data-value="m5">Contact</span>
-          <img
-            class="menu-contact"
-            src="assets/icon/btn-menu-contacto.svg"
-            alt="Contact"
-            title="Contact"
-            fetchpriority="high"
-          />
-        </a>
-      </nav>
-    </div>
+    <nav aria-label="menu">
+      <ul>
+        <li>
+          <a href="#inicio" data-scroll-spy>
+            <img
+              class="menu-home"
+              src="assets/icon/btn-menu-home.svg"
+              alt="Home"
+              fetchpriority="high"
+            />
+            <span data-section="menu" data-value="m1">Home</span>
+          </a>
+        </li>
+        <li>
+          <a href="#sobreMi" data-scroll-spy>
+            <img
+              class="menu-about"
+              src="assets/icon/btn-menu-perfil.svg"
+              alt="About"
+              fetchpriority="high"
+            />
+            <span data-section="menu" data-value="m2">About</span>
+          </a>
+        </li>
+        <li>
+          <a href="#habilidades" data-scroll-spy>
+            <img
+              class="menu-skills"
+              src="assets/icon/btn-menu-habilidades.svg"
+              alt="Skills"
+              fetchpriority="high"
+            />
+            <span data-section="menu" data-value="m3">Skills</span>
+          </a>
+        </li>
+        <li>
+          <a href="#proyectos" data-scroll-spy>
+            <img
+              class="menu-project"
+              src="assets/icon/btn-menu-proyectos.svg"
+              alt="Porfolio"
+              fetchpriority="high"
+            />
+            <span data-section="menu" data-value="m4">Porfolio</span>
+          </a>
+        </li>
+        <li>
+          <a href="#contacto" data-scroll-spy>
+            <img
+              class="menu-contact"
+              src="assets/icon/btn-menu-contacto.svg"
+              alt="Contact"
+              fetchpriority="high"
+            />
+            <span data-section="menu" data-value="m5">Contact</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
     <section class="modal-offer">
       <article id="modal" class="modal-window c-visible">
