Feat: refactoring de links y img

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                 href="https://www.linkedin.com/in/fercode"
                 title="LinkedIn"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg
                   width="28"
@@ -354,6 +355,7 @@
                 href="https://github.com/fergsosa"
                 title="GitHub"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg
                   width="28"
@@ -377,7 +379,7 @@
         <div class="about-box container">
           <img
             src="assets/fer-cv.avif"
-            alt="Fernando Sosa"
+            alt="Desarrollador Fernando Sosa"
             title="Programador"
             decoding="async"
           />
@@ -466,14 +468,21 @@
               </figure>
             </div>
           </div>
+
           <div class="skills-box back-ent">
             <h2 class="title-second">BACKEND</h2>
             <div class="skills-item">
               <figure>
-                <img src="assets/skill/back-nodejs.svg" alt="node"
-                decoding="async" js" /> <img
-                src="assets/skill/back-nodejs-text.svg" alt="node"
-                decoding="async" js" />
+                <img
+                  src="assets/skill/back-nodejs.svg"
+                  alt="node.js"
+                  decoding="async"
+                />
+                <img
+                  src="assets/skill/back-nodejs-text.svg"
+                  alt="node.js"
+                  decoding="async"
+                />
               </figure>
               <figure>
                 <img
@@ -525,6 +534,7 @@
               </figure>
             </div>
           </div>
+
           <div class="skills-box herramientas">
             <h2
               class="title-second"
@@ -757,6 +767,7 @@
               href="https://www.linkedin.com/in/fercode"
               title="LinkedIn"
               target="_blank"
+              rel="noopener noreferrer"
             >
               <svg
                 width="28"
@@ -791,6 +802,7 @@
               href="https://github.com/fergsosa"
               title="GitHub"
               target="_blank"
+              rel="noopener noreferrer"
             >
               <svg
                 width="28"
