feat: el rel de links

--- a/index.html
+++ b/index.html
@@ -656,6 +656,7 @@
                 class="link-title"
                 href="https://marketplace.visualstudio.com/items?itemName=cod-fs.theme-italic-fs"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <b data-section="proyecto" data-value="title-theme"
                   >Theme Italic FS</b
@@ -671,6 +672,7 @@
                 class="link-title"
                 href="https://fergsosa.github.io/react-app-crud"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <b data-section="proyecto" data-value="title-crud">CRUD</b>
 
@@ -684,6 +686,7 @@
                 class="link-title"
                 href="https://fergsosa.github.io/app-SPA-apis/"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <b data-section="proyecto" data-value="title-apis">SPA APIS</b>
 
@@ -697,6 +700,7 @@
                 class="link-title"
                 href="https://fergsosa.github.io/react-app-tarjeta_de_compra/"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <b data-section="proyecto" data-value="title-shopping"
                   >Shopping cart</b
@@ -712,6 +716,7 @@
                 class="link-title"
                 href="https://fergsosa.github.io/eleventy-blog-started/"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <b data-section="proyecto" data-value="title-blog">Blog</b>
 
@@ -725,6 +730,7 @@
                 class="link-title"
                 href="https://fergsosa.github.io/Incluir-html-AJAX/"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <b data-section="proyecto" data-value="title-ajax"
                   >Simple Page</b
@@ -740,6 +746,7 @@
                 class="link-title"
                 href="https://fergsosa.github.io/Slider-Efectos-Series/"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <b data-section="proyecto" data-value="title-slider"
                   >Slider Effect</b
