Feat: semántica HTML <p>

--- a/index.html
+++ b/index.html
@@ -765,9 +765,9 @@
           <h2 class="title-second" data-section="contacto" data-value="h2">
             Contact
           </h2>
-          <span data-section="contacto" data-value="h3">
+          <p data-section="contacto" data-value="h3">
             Thank you for your visit
-          </span>
+          </sp>
 
           <address class="box-contact">
             <a
@@ -830,6 +830,7 @@
             <a
               href="assets/cv/CV-Fer-Programacion-F.pdf"
               target="_blank"
+              rel="noopener noreferrer"
               data-section="contacto"
               data-value="a"
             >
