Feat: Se actualizo titulo a FullStack

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           <div class="home-info">
             <h1>Fernando Sosa</h1>
             <strong data-section="inicio" data-value="h3">
-              Frontend Web Developer
+              FullStack Web Developer
             </strong>
 
             <address class="box-contact">
